Attempt to fix centering on safari

--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@ hr {
   #header {
     grid-template-columns: 100%;
     width: 100%;
+    margin-bottom: 20px;
   }
 
   #header-box {
